"useState , useEffect used"

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, Opera */
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
